name:           hsglsamples 
version:        0.1
license:        BSD3
maintainer:     golubovsky@gmail.com
synopsis:       Example GLFW+Haskell applications
category:       graphics, user interface
description:
    Example programs for GLFW+GL+Haskell
build-type:     Simple
build-depends:  base >= 4.0, containers >= 0.3.0.0, glfwapp >= 0.1, shapes2d >= 0.1,
                xml >= 1.3.7, utf8-string >= 0.3.6, bytestring >= 0.9, io-layer >= 0.1,
                directory >= 1.0.1.0, filepath >= 1.1, dlist >= 0.5,
                split >= 0.1.2, NineP == 0.0.2, enumerator >= 0.4.1, text >= 0.9,
                transformers >= 0.2

executable:     shrelclicks
main-is:        shrelclicks.hs
extra-libraries: GL, GLU, Xrandr

executable:     shclicks
main-is:        shclicks.hs
extra-libraries: GL, GLU, Xrandr

executable:     glviewer
main-is:        glviewer.hs
extra-libraries: GL, GLU, Xrandr

executable:     svgscn
main-is:        svgscn.hs
extra-libraries: GL, GLU, Xrandr

executable:     nsexample
main-is:        nsexample.hs

executable:     enumtest
main-is:        enumtest.hs


