name:           io-layer 
version:        0.1
license:        BSD3
maintainer:     golubovsky@gmail.com
synopsis:       IO Layer library with custom implementations of Handles, namespaces, etc.
category:       graphics, user interface
description:
    This package implements an I/O layer base on new features of GHC runtime:
    .
    New GHC runtime provides API to implement I/O Handles backed by arbitrary
    instances of GHC.IO.Device and GHC.IO.BufferedIO classes. This package
    provides such implementation of Handles backed by continuation-based
    stream processor functions.
build-type:     Simple
build-depends:  base >= 4.2.0.1, bytestring >= 0.9, dlist >= 0.5, filepath >= 1.1,
                containers >= 0.3, directory >= 1.0.1, NineP >= 0.0.2, unix >= 2.4,
                mtl >= 1.1, stm >= 2.1, either-unwrap == 1.1, binary >= 0.5.0.2
extensions:     DeriveDataTypeable, TypeSynonymInstances, ScopedTypeVariables

exposed-modules:
    GHC.IO.CSPHandle, Control.Monad.NameSpaceM,
    System.IO9.Device, System.IO9.Devices.DevPosix, Control.Monad.NineM

other-modules:
    PrivateDefs, System.IO9.NameSpace.Pure
