name:           nsio-layer 
version:        0.1
license:        BSD3
maintainer:     golubovsky@gmail.com
synopsis:       IO Layer library with custom implementations of Handles, namespaces, etc.
category:       graphics, user interface
description:
    This package implements an I/O layer base on new features of GHC runtime:
    .
    New GHC runtime provides API to implement I/O Handles backed by arbitrary
    instances of GHC.IO.Device and GHC.IO.BufferedIO classes. This package
    provides such implementation of Handles backed by continuation-based
    stream processor functions.
build-type:     Simple
build-depends:  base >= 4.2.0.1, bytestring >= 0.9, dlist >= 0.5, filepath >= 1.1,
                containers >= 0.3, directory >= 1.0.1, NineP >= 0.0.2, unix >= 2.4,
                transformers >= 0.2, stm >= 2.1, either-unwrap == 1.1, tuple >= 0.2,
                enumerator >= 0.4.1, text >= 0.9.0.1, MonadCatchIO-transformers >= 0.2.2

extensions:     DeriveDataTypeable, TypeSynonymInstances, ScopedTypeVariables

exposed-modules:
    Data.NineP.Bits, Data.NineP.Posix, 
    GHC.IO.CSPHandle, 
    System.IO9.Error, System.IO9.DirStream,
    System.IO9.DevLayer, System.IO9.NameSpaceT,
    System.IO9.HostAccess
    

other-modules:
    System.IO9.NameSpace.Monad, System.IO9.NameSpace.Types, System.IO9.NameSpace.Util,
    System.IO9.NameSpace.Enumerator
