name:           ns-base
version:        0.1
license:        BSD3
maintainer:     golubovsky@gmail.com
synopsis:       Base applications for the NameSpaced IO Layer.
category:       Console

description:
    Base embedded applications for the NameSpaced IO Layer.

build-type:     Simple

build-depends:  base >= 4.0 && < 5.0, nsio-layer >= 0.1, containers >= 0.3, 
                yaml-enumtok >= 0.1, dlist >= 0.5, filepath >= 1.1, enumerator >= 0.4.2,
                utf8-string >= 0.3.6, bytestring >= 0.9.1.7, text >= 0.10.0.0.1,
                cmdargs >= 0.6.4, either-unwrap >= 1.1

executable:     ns-base
main-is:        ns-base.hs

