Name:                scc-lib-only
Version:             0.5.1
Cabal-Version:       >= 1.2
Build-Type:          Simple
Synopsis:            Library-only fork of the Streaming component combinators package
Category:            Control, Combinators, Concurrency
Tested-with:         GHC
Description:
  This package is a library-only subset of the SCC package (http://hackage.haskell.org/package/scc).
  The shell executable was excluded because its dependencies are incompatible with the rest of this
  project.
  .
  SCC is a layered library of Streaming Component Combinators. The lowest layer defines stream 
  abstractions and nested producer-consumer coroutine pairs based on the Coroutine monad transformer.
  On top of that are streaming component types, a number of primitive streaming components and 
  a set of component combinators.
  .
  The original library design is based on paper 
  <http://conferences.idealliance.org/extreme/html/2006/Blazevic01/EML2006Blazevic01.html>
  .
  Mario Bla&#382;evi&#263;, Streaming component combinators, Extreme Markup Languages, 2006.
  
License:             GPL
License-file:        LICENSE.txt
Copyright:           (c) 2008-2010 Mario Blazevic
Author:              Mario Blazevic
Maintainer:          blamario@yahoo.com
Homepage:            http://trac.haskell.org/SCC/
Extra-source-files:  grammar.bnf Makefile LICENSE.txt Test.hs

Library
  Exposed-Modules:   Control.Concurrent.SCC.Streams, Control.Concurrent.SCC.Types,
                     Control.Concurrent.SCC.Combinators, Control.Concurrent.SCC.Primitives,
                     Control.Concurrent.SCC.XML,
                     Control.Concurrent.Configuration, Control.Concurrent.SCC.Components
  Build-Depends:     base < 5, containers, transformers >= 0.2 && < 0.3, monad-parallel, 
                     monad-coroutine

