Name:                yaml-enumtok
Version:             0.1
Cabal-Version:       >= 1.6
License:             LGPL
Copyright:           Oren Ben-Kiki 2007, 2008, portions by Dmitry Golubovsky, 2010
Category:            Enumerator
Synopsis:            Enumerator-compatible YAML tokenizer
Build-type:          Simple

Description:         This package contains an enumerator/iteratee compatible YAML
                     tokenizer derived from the \"YAML Reference Implementaton\",
                     see <http://hackage.haskell.org/package/YamlReference>.

Extra-source-files:  Text/Yaml/Reference.bnf

Exposed-modules:     Text.Yaml.EnumTok

Other-modules:       Text.Yaml.Types

Build-depends:       base >= 4.0 && < 5.0, containers >= 0.3, dlist >= 0.5

